krita/data/input/painttoolsaicompatible.profile
@@ -15,7 +15,7 @@
 
 [General]
 name=Paint Tool Sai Compatible
-version=5
+version=6
 
 [Pan Canvas]
 0={4;1;[];0;0;0}
