krita/data/input/photoshopcompatible.profile
@@ -15,7 +15,7 @@
 
 [General]
 name=Photoshop Compatible
-version=5
+version=6
 
 [Pan Canvas]
 0={0;5;[];0;0;2}
